// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders brand correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-component-ui-spinner om-component-ui-spinner-brand"
      >
        <div
          class="om-component-ui-spinner-lottie"
          style="width: 32px; height: 32px;"
        />
        <div
          class="om-component-ui-spinner-content"
        >
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-default-tertiary om-component-ui-spinner-title"
          >
            Loading
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-component-ui-spinner om-component-ui-spinner-brand"
    >
      <div
        class="om-component-ui-spinner-lottie"
        style="width: 32px; height: 32px;"
      />
      <div
        class="om-component-ui-spinner-content"
      >
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-default-tertiary om-component-ui-spinner-title"
        >
          Loading
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner renders brand-bg correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-component-ui-spinner om-component-ui-spinner-brand om-component-ui-spinner-brand-bg"
      >
        <div
          class="om-component-ui-spinner-icon-wrap"
          style="width: 74px; height: 74px;"
        >
          <svg
            aria-hidden="true"
            class="om-component-ui-spinner-bg"
            height="74"
            viewBox="0 0 56 57"
            width="74"
          >
            <circle
              cx="28"
              cy="28.75"
              fill="url(#spinner-bg-r0)"
              r="28"
            />
            <defs>
              <radialgradient
                cx="0"
                cy="0"
                gradientTransform="translate(-34.9085 92.6678) rotate(-45.6594) scale(108.853 103.698)"
                gradientUnits="userSpaceOnUse"
                id="spinner-bg-r0"
                r="1"
              >
                <stop
                  stop-color="#073387"
                />
                <stop
                  offset="0.216852"
                  stop-color="#90A8CF"
                />
                <stop
                  offset="0.567103"
                  stop-color="#CBD6E8"
                />
                <stop
                  offset="1"
                  stop-color="#F9F9F9"
                />
              </radialgradient>
            </defs>
          </svg>
          <div
            class="om-component-ui-spinner-lottie"
            style="width: 49.33333333333333px; height: 49.33333333333333px;"
          />
        </div>
        <div
          class="om-component-ui-spinner-content"
        >
          <div
            class="om-component-ui-typography om-component-ui-typography-headline om-component-ui-typography-headline-sm om-component-ui-typography-color-default om-component-ui-spinner-title"
          >
            Loading
          </div>
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-default-tertiary om-component-ui-spinner-body"
          >
            Please wait
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-component-ui-spinner om-component-ui-spinner-brand om-component-ui-spinner-brand-bg"
    >
      <div
        class="om-component-ui-spinner-icon-wrap"
        style="width: 74px; height: 74px;"
      >
        <svg
          aria-hidden="true"
          class="om-component-ui-spinner-bg"
          height="74"
          viewBox="0 0 56 57"
          width="74"
        >
          <circle
            cx="28"
            cy="28.75"
            fill="url(#spinner-bg-r0)"
            r="28"
          />
          <defs>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(-34.9085 92.6678) rotate(-45.6594) scale(108.853 103.698)"
              gradientUnits="userSpaceOnUse"
              id="spinner-bg-r0"
              r="1"
            >
              <stop
                stop-color="#073387"
              />
              <stop
                offset="0.216852"
                stop-color="#90A8CF"
              />
              <stop
                offset="0.567103"
                stop-color="#CBD6E8"
              />
              <stop
                offset="1"
                stop-color="#F9F9F9"
              />
            </radialgradient>
          </defs>
        </svg>
        <div
          class="om-component-ui-spinner-lottie"
          style="width: 49.33333333333333px; height: 49.33333333333333px;"
        />
      </div>
      <div
        class="om-component-ui-spinner-content"
      >
        <div
          class="om-component-ui-typography om-component-ui-typography-headline om-component-ui-typography-headline-sm om-component-ui-typography-color-default om-component-ui-spinner-title"
        >
          Loading
        </div>
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-default-tertiary om-component-ui-spinner-body"
        >
          Please wait
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner renders brand-bg without body 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-component-ui-spinner om-component-ui-spinner-brand om-component-ui-spinner-brand-bg"
      >
        <div
          class="om-component-ui-spinner-icon-wrap"
          style="width: 74px; height: 74px;"
        >
          <svg
            aria-hidden="true"
            class="om-component-ui-spinner-bg"
            height="74"
            viewBox="0 0 56 57"
            width="74"
          >
            <circle
              cx="28"
              cy="28.75"
              fill="url(#spinner-bg-r1)"
              r="28"
            />
            <defs>
              <radialgradient
                cx="0"
                cy="0"
                gradientTransform="translate(-34.9085 92.6678) rotate(-45.6594) scale(108.853 103.698)"
                gradientUnits="userSpaceOnUse"
                id="spinner-bg-r1"
                r="1"
              >
                <stop
                  stop-color="#073387"
                />
                <stop
                  offset="0.216852"
                  stop-color="#90A8CF"
                />
                <stop
                  offset="0.567103"
                  stop-color="#CBD6E8"
                />
                <stop
                  offset="1"
                  stop-color="#F9F9F9"
                />
              </radialgradient>
            </defs>
          </svg>
          <div
            class="om-component-ui-spinner-lottie"
            style="width: 49.33333333333333px; height: 49.33333333333333px;"
          />
        </div>
        <div
          class="om-component-ui-spinner-content"
        >
          <div
            class="om-component-ui-typography om-component-ui-typography-headline om-component-ui-typography-headline-sm om-component-ui-typography-color-default om-component-ui-spinner-title"
          >
            Loading
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-component-ui-spinner om-component-ui-spinner-brand om-component-ui-spinner-brand-bg"
    >
      <div
        class="om-component-ui-spinner-icon-wrap"
        style="width: 74px; height: 74px;"
      >
        <svg
          aria-hidden="true"
          class="om-component-ui-spinner-bg"
          height="74"
          viewBox="0 0 56 57"
          width="74"
        >
          <circle
            cx="28"
            cy="28.75"
            fill="url(#spinner-bg-r1)"
            r="28"
          />
          <defs>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(-34.9085 92.6678) rotate(-45.6594) scale(108.853 103.698)"
              gradientUnits="userSpaceOnUse"
              id="spinner-bg-r1"
              r="1"
            >
              <stop
                stop-color="#073387"
              />
              <stop
                offset="0.216852"
                stop-color="#90A8CF"
              />
              <stop
                offset="0.567103"
                stop-color="#CBD6E8"
              />
              <stop
                offset="1"
                stop-color="#F9F9F9"
              />
            </radialgradient>
          </defs>
        </svg>
        <div
          class="om-component-ui-spinner-lottie"
          style="width: 49.33333333333333px; height: 49.33333333333333px;"
        />
      </div>
      <div
        class="om-component-ui-spinner-content"
      >
        <div
          class="om-component-ui-typography om-component-ui-typography-headline om-component-ui-typography-headline-sm om-component-ui-typography-color-default om-component-ui-spinner-title"
        >
          Loading
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner renders default type correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-component-ui-spinner"
        role="progressbar"
        style="width: 32px; height: 32px;"
      >
        <svg
          class="om-component-ui-spinner-circle"
          viewBox="0 0 50 50"
        >
          <circle
            class="om-component-ui-spinner-path"
            cx="25"
            cy="25"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-component-ui-spinner"
      role="progressbar"
      style="width: 32px; height: 32px;"
    >
      <svg
        class="om-component-ui-spinner-circle"
        viewBox="0 0 50 50"
      >
        <circle
          class="om-component-ui-spinner-path"
          cx="25"
          cy="25"
          fill="none"
          r="20"
          stroke-width="4"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
